syntax="proto3";
package visual;
option java_package="visual";
option java_outer_classname="Ui";
option java_multiple_files=true;

service UiServer{
    rpc plot(PlotMessage) returns (PlotMessage){}
    rpc plotScatterGraph(plotScatterGraphMessage) returns(Flag){}
}

message Flag{
    bool isSuccess=1;
}

message Plot {
    repeated float x = 1;
    repeated float y = 2;
}

message Resp {
    int32 ec = 1;
    string em = 2;
}

message RequestMeta {
    string host = 1;
}

message PlotMessage {
    RequestMeta meta = 1;
    string title = 2;
    string id = 3;
    Plot data = 4;
    Resp resp = 5;
}

message PlotDouble{
    repeated double x=1;
    repeated double y=2;
}

message plotScatterGraphMessage{
    RequestMeta meta=1;
    string id=2;
    repeated PlotDouble pointCollection=3;

}